<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_g1_app</name>
  <version>0.1.0</version>
  <description>ROS2 Jazzy application for Unitree G1: movement/gestures, audio (speak &amp; transcription), video processing</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>action_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <!-- Optional: ros-jazzy-cv-bridge for video_node OpenCV processing -->
  <!-- <exec_depend>cv_bridge</exec_depend> -->
  <!-- Optional: required when running on/with Unitree G1 ROS2 stack (g1_platform) -->
  <!-- <exec_depend>g1_interface</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
